Firebase and other stuff

--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -45,6 +45,11 @@ $no-of-columns: 12;
     padding-top: 7rem;
 }
 
+.section--extra-vertical-padding {
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+}
+
 .section--small-vertical-padding {
     padding-top: $spacing-sm;
     padding-bottom: $spacing-sm;
