--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 @import 'button';
 @import 'heading';
 @import 'courses-list';
+@import 'video-react';
+@import 'react-burger';
 
 @import '../components/footer/footer';
 @import '../components/navigation/navigation';
